--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,5 +42,9 @@
     <Compile Include="Entities\StudentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="backupdb\backup.bak" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
